# APE

./: .dockerignore  .env  .gitignore  CLEANUP_SUMMARY.md  Dockerfile  README.md  a2a_simulation.py  chat_cli.py  cli.py  cli_chat.py  dev_plan.md  docker-compose.yml  download_ollama_model.sh  env.example  llm_agent_build_instructions.txt  main.py  mcp_server.py  mcp_server_refined.py  memory_implementation_spec.md  project_insights_summary.md  pyproject.toml  refinement_plan.md  requirements.txt  test_mcp.py  test_real_cli_scenarios.py  todo_memory.md
ape/: __init__.py  api.py  config.py  db_pool.py  errors.py  llm.py  logging.py  session.py  sessions.db-shm  sessions.db-wal  settings.py  utils.py
ape/cli/: chat_agent.py  context_manager.py  mcp_client.py
ape/core/: agent_core.py  memory.py  rate_limiter.py  vector_memory.py
ape/mcp/: __init__.py  implementations.py  implementations_builtin.py  models.py  plugin.py  server.py  session_manager.py
ape/prompts/: __init__.py  error_report.prompt.md  loader.py  tool_explanation.prompt.md
ape/resources/: __init__.py
ape/tools/: memory.py
backup_legacy_files/: api.py  cli.py  llm.py  main.py  schemas.py  tools.py
docs/: index.md  plugins.md
findings/: 01_sliding_window_memory_review.md  02_resources_vs_tool_usage.md  03_a2a_capability_review.md  04_summarization_approaches.md  05_memory_layers.md  06_agent_orchestration.md  07_the_illusion_of_agency.md
scripts/: docker-entrypoint.sh
tests/: test_main.py
tests/unit/: test_chat_functionality.py  test_cli_integration.py  test_enhanced_chat.py  (+6 more)
(+8 files in other folders)
